Added version for concurrency control on elasticsearch document update.
