# api/representations/annotation_request.py
@@ -2,6 +2,7 @@
 
 from __future__ import absolute_import
 from api.representations.annotations import Annotations
+from api.representations.image_id_version import ImageIdVersion
 from .base_model_ import Model
 from datetime import date, datetime
 from typing import List, Dict
@@ -13,26 +14,26 @@ class AnnotationRequest(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, ids=None, annotations=None):
+    def __init__(self, id_versions=None, annotations=None):
         """
         AnnotationRequest - a model defined in Swagger
 
-        :param ids: The ids of this AnnotationRequest.
-        :type ids: List[str]
+        :param id_versions: The id_versions of this AnnotationRequest.
+        :type id_versions: ImageIdVersion
         :param annotations: The annotations of this AnnotationRequest.
         :type annotations: Annotations
         """
         self.swagger_types = {
-            'ids': List[str],
+            'id_versions': ImageIdVersion,
             'annotations': Annotations
         }
 
         self.attribute_map = {
-            'ids': 'ids',
+            'id_versions': 'id_versions',
             'annotations': 'annotations'
         }
 
-        self._ids = ids
+        self._id_versions = id_versions
         self._annotations = annotations
 
     @classmethod
@@ -48,27 +49,25 @@ class AnnotationRequest(Model):
         return deserialize_model(dikt, cls)
 
     @property
-    def ids(self):
+    def id_versions(self):
         """
-        Gets the ids of this AnnotationRequest.
-        Id of images to annotate.
+        Gets the id_versions of this AnnotationRequest.
 
-        :return: The ids of this AnnotationRequest.
-        :rtype: List[str]
+        :return: The id_versions of this AnnotationRequest.
+        :rtype: ImageIdVersion
         """
-        return self._ids
+        return self._id_versions
 
-    @ids.setter
-    def ids(self, ids):
+    @id_versions.setter
+    def id_versions(self, id_versions):
         """
-        Sets the ids of this AnnotationRequest.
-        Id of images to annotate.
+        Sets the id_versions of this AnnotationRequest.
 
-        :param ids: The ids of this AnnotationRequest.
-        :type ids: List[str]
+        :param id_versions: The id_versions of this AnnotationRequest.
+        :type id_versions: ImageIdVersion
         """
 
-        self._ids = ids
+        self._id_versions = id_versions
 
     @property
     def annotations(self):
